--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "webpack": "node ./node_modules/webpack/bin/webpack --config webpack.config.js --display-error-details --progress --profile --color",
     "copy_7z": "copyfiles -u 1 -f node_modules/7z-bin/win/7z.* dist/win",
-    "copy_css": "copyfiles -f style.scss dist",
-    "build": "npm run webpack && npm run copy_css && npm run copy_7z && extractInfo"
+    "copy_assets": "copyfiles -f src/icons.svg dist && copyfiles -f style.scss dist",
+    "build": "npm run webpack && npm run copy_assets && npm run copy_7z && extractInfo"
   },
   "devDependencies": {
     "@types/i18next": "^11.6.0",
