--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ts-loader": "^6.2.2",
     "typescript": "^3.8.3",
     "vortex-api": "Nexus-Mods/vortex-api#mod-packs",
+    "vortexmt": "Nexus-Mods/node-vortexmt",
     "webpack": "^4.29.3",
     "webpack-cli": "^3.2.3"
   }
