--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@types/node": "^14.14.37",
     "@types/react": "16.8.2",
     "@types/react-bootstrap": "^0.32.16",
-    "@types/react-redux": "7.0.1",
+    "@types/react-redux": "^7.1.16",
     "@types/redux": "3.6.0",
     "bluebird": "^3.5.3",
     "copyfiles": "^2.1.0",
@@ -23,7 +23,7 @@
     "node-7z": "Nexus-Mods/node-7z",
     "react-bootstrap": "^0.32.0",
     "react-i18next": "10.9.0",
-    "react-redux": "^6.0.0",
+    "react-redux": "^7.2.3",
     "redux": "4.0.1",
     "redux-act": "^1.7.4",
     "semver": "^5.6.0",
