implemented dialog to wrap up collection install

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "webpack": "node ./node_modules/webpack/bin/webpack --config webpack.config.js --display-error-details --progress --profile --color",
     "copy_7z": "copyfiles -u 1 -f node_modules/7z-bin/win/7z.* dist/win",
-    "copy_assets": "copyfiles -f src/icons.svg dist && copyfiles -f src/collectionicon.svg dist && copyfiles -f style.scss dist && copyfiles -f src/assets/fallback_tile.png dist",
+    "copy_assets": "copyfiles -f src/language.json dist && copyfiles -f src/icons.svg dist && copyfiles -f src/collectionicon.svg dist && copyfiles -f style.scss dist && copyfiles -f src/assets/fallback_tile.png dist",
     "build": "npm run webpack && npm run copy_assets && npm run copy_7z && extractInfo"
   },
   "devDependencies": {
