--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
-    "@types/react": "16.8.2",
+    "@types/react": "^17.0.20",
     "@types/react-bootstrap": "^0.32.16",
     "@types/react-redux": "^7.1.16",
     "@types/redux": "3.6.0",
