--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "author": "Black Tree Gaming Ltd.",
   "scripts": {
     "webpack": "node ./node_modules/webpack/bin/webpack --config webpack.config.js --display-error-details --progress --profile --color",
-    "copy_7z": "copyfiles -u 1 -f node_modules/7z-bin/win/7z.* dist/win",
     "copy_assets": "copyfiles -f src/language.json dist && copyfiles -f src/icons.svg dist && copyfiles -f src/collectionicon.svg dist && copyfiles -f style.scss dist && copyfiles -f src/assets/fallback_tile.png dist",
-    "build": "npm run webpack && npm run copy_assets && npm run copy_7z && extractInfo"
+    "bundle7z": "7z a -t7z collections.7z .\\dist\\index.js .\\dist\\info.json .\\dist\\language.json .\\dist\\*.svg .\\dist\\style.scss",
+    "build": "npm run webpack && npm run copy_assets && extractInfo"
   },
   "devDependencies": {
+    "7z-bin": "Nexus-Mods/7z-bin",
     "@types/node": "^14.14.37",
     "@types/react": "^17.0.20",
     "@types/react-bootstrap": "^0.32.16",
@@ -20,13 +21,17 @@
     "bluebird": "^3.5.3",
     "copyfiles": "^2.1.0",
     "i18next": "^15.0.9",
+    "memoize-one": "^6.0.0",
     "node-7z": "Nexus-Mods/node-7z",
     "react-bootstrap": "^0.32.0",
     "react-i18next": "10.9.0",
     "react-redux": "^7.2.3",
+    "react-select": "^5.2.1",
     "redux": "4.0.1",
     "redux-act": "^1.7.4",
     "semver": "^5.6.0",
+    "shortid": "^2.2.16",
+    "tmp": "^0.2.1",
     "ts-loader": "^6.2.2",
     "typescript": "^4.4.3",
     "vortex-api": "Nexus-Mods/vortex-api#mod-packs",
