--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "license": "GPL-3.0",
   "author": "Black Tree Gaming Ltd.",
   "scripts": {
-    "webpack": "node ./node_modules/webpack/bin/webpack --config webpack.config.js --display-error-details --progress --profile --color",
+    "webpack": "node ./node_modules/webpack/bin/webpack --config webpack.config.js --progress --profile --color",
     "copy_assets": "copyfiles -f src/language.json dist && copyfiles -f src/icons.svg dist && copyfiles -f src/collectionicon.svg dist && copyfiles -f style.scss dist && copyfiles -f src/assets/fallback_tile.png dist",
     "bundle7z": "7z a -t7z collections.7z .\\dist\\index.js .\\dist\\info.json .\\dist\\language.json .\\dist\\*.svg .\\dist\\style.scss",
     "build": "npm run webpack && npm run copy_assets && extractInfo"
@@ -34,9 +34,9 @@
     "tmp": "^0.2.1",
     "ts-loader": "^6.2.2",
     "typescript": "^4.4.3",
-    "vortex-api": "Nexus-Mods/vortex-api#mod-packs",
+    "vortex-api": "Nexus-Mods/vortex-api",
     "vortexmt": "Nexus-Mods/node-vortexmt",
-    "webpack": "^4.29.3",
-    "webpack-cli": "^3.2.3"
+    "webpack": "^5.66.0",
+    "webpack-cli": "^4.9.1"
   }
 }
