--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "memoize-one": "^6.0.0",
     "node-7z": "Nexus-Mods/node-7z",
     "react-bootstrap": "^0.32.0",
-    "react-i18next": "10.9.0",
+    "react-i18next": "^11.15.3",
     "react-redux": "^7.2.3",
     "react-select": "^1.3.0",
     "redux": "4.0.1",
@@ -32,10 +32,9 @@
     "semver": "^5.6.0",
     "shortid": "^2.2.16",
     "tmp": "^0.2.1",
-    "ts-loader": "^6.2.2",
+    "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "vortex-api": "Nexus-Mods/vortex-api",
-    "vortexmt": "Nexus-Mods/node-vortexmt",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1"
   }
