--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "Black Tree Gaming Ltd.",
   "scripts": {
     "webpack": "node ./node_modules/webpack/bin/webpack --config webpack.config.js --progress --profile --color",
-    "copy_assets": "copyfiles -f src/language.json dist && copyfiles -f src/icons.svg dist && copyfiles -f src/collectionicon.svg dist && copyfiles -f style.scss dist && copyfiles -f src/assets/fallback_tile.png dist",
+    "copy_assets": "copyfiles -f src/language.json dist && copyfiles -f src/icons.svg dist && copyfiles -f src/collectionicon.svg dist && copyfiles -f style.scss dist && copyfiles -f src/assets/fallback_tile.png dist && copyfiles -f node_modules/bsdiff-node/build/Release/bsdiff.node dist",
     "bundle7z": "7z a -t7z collections.7z .\\dist\\index.js .\\dist\\info.json .\\dist\\language.json .\\dist\\*.svg .\\dist\\style.scss",
     "update_validation": "generate-validation .",
     "_postinstall": "npm run update_validation",
@@ -21,7 +21,9 @@
     "@types/react-redux": "^7.1.16",
     "@types/redux": "3.6.0",
     "bluebird": "^3.5.3",
+    "bsdiff-node": "TanninOne/bsdiff-node",
     "copyfiles": "^2.1.0",
+    "crc-32": "^1.2.1",
     "i18next": "^15.0.9",
     "memoize-one": "^6.0.0",
     "node-7z": "Nexus-Mods/node-7z",
