--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "ts-loader": "^9.2.6",
     "ts-v-gen": "^1.0.1",
     "typescript": "^4.9.5",
-    "vortex-api": "Nexus-Mods/vortex-api",
+    "vortex-api": "Nexus-Mods/vortex-api#analytics-mixpanel",
     "webpack": "^5.76.0",
     "webpack-cli": "^4.9.1"
   }
