--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "collections",
   "description": "Allows creation of installation of mod packs (meta mods that install a bunch of other mods)",
-  "version": "0.1.18",
+  "version": "0.2.0",
   "main": "./out/index.js",
   "license": "GPL-3.0",
   "author": "Black Tree Gaming Ltd.",
@@ -15,13 +15,13 @@
   },
   "devDependencies": {
     "7z-bin": "Nexus-Mods/7z-bin",
-    "@types/node": "^14.14.37",
-    "@types/react": "^17.0.20",
+    "@types/node": "^22.0.0",
+    "@types/react": "^18.3.0",
     "@types/react-bootstrap": "^0.32.16",
     "@types/react-redux": "^7.1.16",
     "@types/redux": "3.6.0",
     "bluebird": "^3.5.3",
-    "bsdiff-node": "TanninOne/bsdiff-node",
+    "bsdiff-node": "Nexus-Mods/bsdiff-node#fix-node22",
     "copyfiles": "^2.1.0",
     "crc-32": "^1.2.1",
     "i18next": "^15.0.9",
@@ -36,11 +36,11 @@
     "semver": "^5.6.0",
     "shortid": "^2.2.16",
     "tmp": "^0.2.1",
-    "ts-loader": "^9.2.6",
+    "ts-loader": "^9.5.1",
     "ts-v-gen": "^1.0.1",
-    "typescript": "^4.9.5",
+    "typescript": "^5.6.0",
     "vortex-api": "Nexus-Mods/vortex-api",
-    "webpack": "^5.76.0",
-    "webpack-cli": "^4.9.1"
+    "webpack": "^5.94.0",
+    "webpack-cli": "^5.1.4"
   }
 }
