--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,25 +24,25 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        cache: 'yarn'
     
     - name: Install dependencies
-      run: npm ci
+      run: yarn install --frozen-lockfile
     
     - name: Run TypeScript compiler check
-      run: npx tsc --noEmit
+      run: yarn tsc --noEmit
     
     - name: Run webpack build
-      run: npm run webpack
+      run: yarn webpack
     
     - name: Copy assets
-      run: npm run copy_assets
+      run: yarn copy_assets
     
     - name: Extract info
-      run: npx extractInfo || echo "extractInfo command not found, skipping..."
+      run: yarn extractInfo || echo "extractInfo command not found, skipping..."
     
     - name: Validate build outputs
-      run: npm run test:build
+      run: yarn test:build
     
     - name: Check for required files
       run: |
@@ -98,19 +98,19 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'npm'
+        cache: 'yarn'
     
     - name: Install dependencies
-      run: npm ci
+      run: yarn install --frozen-lockfile
     
     - name: Run TypeScript compiler check
-      run: npx tsc --noEmit
+      run: yarn tsc --noEmit
     
     - name: Run full build
-      run: npm run build
+      run: yarn build
     
     - name: Validate build outputs (Windows)
-      run: npm run test:build
+      run: yarn test:build
     
     - name: Check for required files (Windows)
       run: |
