--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "devDependencies": {
     "7z-bin": "Nexus-Mods/7z-bin",
     "@types/node": "^22.0.0",
-    "@types/react": "^18.3.0",
+    "@types/react": "16.14.66",
+    "@types/react-dom": "16.9.25",
     "@types/react-bootstrap": "^0.32.16",
     "@types/react-redux": "^7.1.16",
     "@types/redux": "3.6.0",
@@ -29,7 +30,9 @@
     "i18next": "^15.0.9",
     "memoize-one": "^6.0.0",
     "node-7z": "Nexus-Mods/node-7z",
+    "react": "^16.12.0",
     "react-bootstrap": "^0.32.0",
+    "react-dom": "^16.12.0",
     "react-i18next": "^11.15.3",
     "react-redux": "^7.2.3",
     "react-select": "^1.3.0",
@@ -44,5 +47,9 @@
     "vortex-api": "Nexus-Mods/vortex-api",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
+  },
+  "resolutions": {
+    "@types/react": "16.14.66",
+    "@types/react-dom": "16.9.25"
   }
 }
