--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "update_validation": "generate-validation .",
     "_postinstall": "npm run update_validation",
     "build": "npm run webpack && npm run copy_assets && extractInfo",
-    "test": "npm run test:build",
+    "test": "jest",
     "test:build": "node scripts/validate-build.js"
   },
   "devDependencies": {
     "7z-bin": "Nexus-Mods/7z-bin",
+    "@types/jest": "^30.0.0",
     "@types/node": "^22.0.0",
     "@types/react": "16.14.66",
     "@types/react-bootstrap": "^0.32.16",
@@ -28,6 +29,7 @@
     "copyfiles": "^2.1.0",
     "crc-32": "^1.2.1",
     "i18next": "^15.0.9",
+    "jest": "^30.1.3",
     "memoize-one": "^6.0.0",
     "node-7z": "Nexus-Mods/node-7z",
     "react": "^16.12.0",
@@ -41,6 +43,7 @@
     "semver": "^5.6.0",
     "shortid": "^2.2.16",
     "tmp": "^0.2.1",
+    "ts-jest": "^29.4.3",
     "ts-loader": "^9.5.1",
     "ts-v-gen": "^1.0.1",
     "typescript": "^5.6.0",
