--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/react-dom": "16.9.25"
   },
   "dependencies": {
+    "numeral": "^2.0.6",
     "react-markdown": "6.0.2",
     "reselect": "^5.1.1"
   }
