--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "ts-loader": "^9.5.1",
     "ts-v-gen": "^1.0.1",
     "typescript": "^5.6.0",
-    "vortex-api": "Nexus-Mods/vortex-api",
+    "vortex-api": "Nexus-Mods/vortex-api#18709-collection-rule-export-import-improvements",
     "webpack": "^5.94.0",
     "webpack-cli": "^5.1.4"
   },
